// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Staff Renders with defaults 1`] = `
<div>
  <svg
    data-testid="staff"
    height="100"
    preserveAspectRatio="none"
    viewBox="0 0 100 100"
    width="100"
    x="0"
    y="0"
  >
    <line
      stroke="black"
      stroke-width="1"
      x1="0"
      x2="100"
      y1="1"
      y2="1"
    />
    <line
      stroke="black"
      stroke-width="1"
      x1="0"
      x2="100"
      y1="25"
      y2="25"
    />
    <line
      stroke="black"
      stroke-width="1"
      x1="0"
      x2="100"
      y1="50"
      y2="50"
    />
    <line
      stroke="black"
      stroke-width="1"
      x1="0"
      x2="100"
      y1="75"
      y2="75"
    />
    <line
      stroke="black"
      stroke-width="1"
      x1="0"
      x2="100"
      y1="99"
      y2="99"
    />
  </svg>
</div>
`;

exports[`Staff Renders with sizes 1`] = `
<div>
  <div
    style="width: 100%; height: 100px;"
  >
    <svg
      data-testid="staff"
      height="100"
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 100 100"
      width="100%"
      x="0"
      y="0"
    >
      <line
        stroke="black"
        stroke-width="1"
        x1="0"
        x2="100"
        y1="1"
        y2="1"
      />
      <line
        stroke="black"
        stroke-width="1"
        x1="0"
        x2="100"
        y1="25"
        y2="25"
      />
      <line
        stroke="black"
        stroke-width="1"
        x1="0"
        x2="100"
        y1="50"
        y2="50"
      />
      <line
        stroke="black"
        stroke-width="1"
        x1="0"
        x2="100"
        y1="75"
        y2="75"
      />
      <line
        stroke="black"
        stroke-width="1"
        x1="0"
        x2="100"
        y1="99"
        y2="99"
      />
    </svg>
  </div>
</div>
`;
